# hexaforth

./: CLAUDE.md  CMakeLists.txt  README.md  UNDERSTANDING.md  baseword_fs_gen.c  compiler.c  compiler.h  main.c  vm.c  vm.h  vm_constants.h  vm_debug.c  vm_debug.h  vm_instruction.h  vm_opcodes.c  vm_opcodes.h  vm_test.c  vm_test.h
forth/: basewords.fs  cross.fs  nuc.fs  test.fs
test/: compiler.c  compiler.h  generate_test_cases.c  main.c  tests.h  vm_test.c  vm_test.h
util/: baseword_fs_gen.c  disasm_hex.c  stack.c  stack.h
